--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "paths": {
       "@ui": ["./src/app/shared/ui/index.ts"],
       "@ui/*": ["./src/app/shared/ui/*"]
-    }
+    },
+    "strictPropertyInitialization": false,
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
